--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 version: '3'
+volumes:
+  db-data:
+
 
 services:
   web:
@@ -9,3 +12,12 @@ services:
     - '.:/rails-docker-mysql'
     tty: true
     stdin_open: true
+    depends_on:
+      - db
+  db:
+    image: mysql:8
+    volumes:
+    - 'db-data:/var/lib/mysql'
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_ROOT_PASSWORD: password
